--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=5000
-MONGO_URI=mongodb://localhost:27017/openUp
+MONGO_URI=mongodb+srv://mern:OpenUp@cluster1.ip3kl.mongodb.net/?retryWrites=true&w=majority&appName=Cluster1
 JWT_SECRET=une_chaine_secrete
 EMAIL_USER=tonemail@gmail.com
 EMAIL_PASS=motdepasse_application
