comment backend forcer imagesss

--- a/.env
+++ b/.env
@@ -7,6 +7,6 @@ SMTP_HOST=smtp.gmail.com
 SMTP_PORT=465
 SMTP_SECURE=true
 JWT_REFRESH_SECRET=ton_secret_refresh
-CLOUDINARY_CLOUD_NAME=ton_cloud_name
-CLOUDINARY_API_KEY=ton_api_key
-CLOUDINARY_API_SECRET=ton_api_secret
+CLOUDINARY_CLOUD_NAME=duousbolq
+CLOUDINARY_API_KEY=227839333734968
+CLOUDINARY_API_SECRET=*********************************
