comment backend forcer imagesss

--- a/.env
+++ b/.env
@@ -9,4 +9,4 @@ SMTP_SECURE=true
 JWT_REFRESH_SECRET=ton_secret_refresh
 CLOUDINARY_CLOUD_NAME=duousbolq
 CLOUDINARY_API_KEY=227839333734968
-CLOUDINARY_API_SECRET=*********************************
+CLOUDINARY_API_SECRET=RDGhs0auCBqDg2bhfnZ-KDvPqY0
